--- a/Backend API/src/main/resources/application.properties
+++ b/Backend API/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.datasource.password=mypass100
 #spring.data.rest.base-path=/api
 
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
