--- a/Frontend/my-photo-links/angular.json
+++ b/Frontend/my-photo-links/angular.json
@@ -25,7 +25,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/animate.css/animate.min.css"
             ],
             "scripts": []
           },
