--- a/Frontend/my-photo-links/package.json
+++ b/Frontend/my-photo-links/package.json
@@ -22,8 +22,11 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+    "animate.css": "^4.1.0",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.5.5",
+    "sweetalert2": "^9.17.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
