--- a/Backend API/src/main/resources/application.properties
+++ b/Backend API/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8085
+#server.port=8085
 
 #Define Database Datasource
 spring.datasource.url=jdbc:mysql://localhost:3306/photo-links-project?useSSL=false&serverTimezone=UTC
@@ -7,5 +7,7 @@ spring.datasource.password=mypass100
 
 #spring.data.rest.base-path=/api
 
-spring.jpa.show-sql=true
+
+spring.jpa.show-sql=false
+logging.pattern.console=
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Kolkata
