--- a/Backend API/src/main/resources/application.properties
+++ b/Backend API/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 #server.port=8085
 
 #Define Database Datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/photo-links-project?useSSL=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/photo-links-project?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://myawsdatabase.cyoh3b81fh6o.ap-south-1.rds.amazonaws.com:3306/photo-links-project?useSSL=false&serverTimezone=UTC
 spring.datasource.username=Gunateja
 spring.datasource.password=mypass100
 
