--- a/Frontend/my-photo-links/package.json
+++ b/Frontend/my-photo-links/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "animate.css": "^4.1.0",
     "hammerjs": "^2.0.8",
