--- a/Frontend/my-photo-links/package.json
+++ b/Frontend/my-photo-links/package.json
@@ -22,10 +22,13 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@capacitor/android": "^2.4.0",
+    "@capacitor/cli": "^2.4.0",
+    "@capacitor/core": "^2.4.0",
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@sweetalert2/ngx-sweetalert2": "^8.1.1",
     "animate.css": "^4.1.0",
-    "hammerjs": "^2.0.8",
+    "ngx-ui-loader": "^9.1.1",
     "rxjs": "~6.5.5",
     "sweetalert2": "^9.17.0",
     "tslib": "^2.0.0",
